--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,8 @@ figure,
 figcaption,
 blockquote,
 dl,
-dd {
+dd,
+pre {
   margin: 0;
 }
 
